# particle-sim-3d

./: .dockerignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  particle.rs  world.rs
web/: nginx.conf  styles.css
