[package]
name = "particle-sim-3d"
version = "1.0.0"
authors = ["Martin Domajnko <https://github.com/martines3000>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]
rust-version = "1.67.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1" }
bevy-inspector-egui = "0.14.0"
rand = "0.8.5"
bevy_egui = "0.18"
